welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:26: error: not found: value getHauteurMonde
  recule(getHauteurMonde())
         ^